capnhat code hung